@@ -1,3 +1,11 @@
+2006-03-03  David Gilbert  <david.gilbert@object-refinery.com>
+
+	* javax/swing/AbstractListModel.java:
+	(AbstractListModel): Added API docs,
+	(fireContentsChanged): Minor API doc correction,
+	(fireIntervalAdded): Likewise,
+	(fireIntervalRemoved): Likewise.
+
 2006-03-03  Roman Kennke  <kennke@aicas.com>
 
 	* NEWS: Added paragraph about Swing improvements.
